Minor insertion edits